--- a/index.html
+++ b/index.html
@@ -808,7 +808,7 @@
     <div class="modal" id="wishModal">
         <div class="modal-content">
             <h2>🌕 Lời Chúc Trung Thu 🌕</h2>
-            <p>Dù không còn là một đứa trẻ, mong Dzu, Nhunn, Dunn, Nanh, Chang vẫn cho mình nghỉ ngời chút xíu. Deadline để sau, nay đi ngắm đèn, gắm trăng, làm con nít một bữa đi!!! Trung Thu vui vẻ nha! Và ước tuần nào Dzu cũng được đi chơi với Nhunn :vv</p>
+            <p>Dù không còn là một đứa trẻ, mong Dzu, Nhunn, Dunn, Nanh, Chang vẫn cho mình nghỉ ngơi chút xíu. Deadline để sau, nay đi ngắm đèn, ngắm trăng, làm con nít một bữa đi!!! Trung Thu vui vẻ nha! Và ước tuần nào Dzu cũng được đi chơi với Nhunn :vv</p>
             <p style="margin-top: 20px;">💖 Loopy yêu quý gửi tặng! 💖</p>
             <button class="close-modal" onclick="closeModal()">Cảm Ơn Loopy</button>
         </div>
